# hubtracktw

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 21ab2b54790f_adiciona_coluna_url.py  30cdeff62e4b_.py  7c07eb7fc63d_.py  7d7f8fe04481_.py  8f8a9536ecff_.py  a816c518b85b_add_github_metadata_columns.py  b821f820423a_.py  d9b959e57bba_create_table_repositories.py
src/: main.py
src/api/: deps.py
src/api/v1/endpoints/: repository.py
src/core/: config.py
src/db/: session.py
src/models/: repository.py
src/schemas/: repository.py
src/services/: github_client.py
